<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.detail.DetailFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            tools:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="fitXY"
                tools:src="@tools:sample/backgrounds/scenic"
                android:contentDescription="@string/gambar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="-30dp"
                android:paddingHorizontal="30dp"
                android:paddingTop="30dp"
                android:background="@drawable/background_detail">

                <TextView
                    android:id="@+id/tv_item_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textColor="@color/md_theme_onSurface"
                    android:fontFamily="@font/inter_semibold"
                    tools:text="@string/wisata_name"/>

                <TextView
                    android:id="@+id/tv_item_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:drawablePadding="8dp"
                    android:textSize="16sp"
                    android:textColor="@color/md_theme_onSurface"
                    android:fontFamily="@font/inter_semibold"
                    android:gravity="center_vertical"
                    app:drawableStartCompat="@drawable/ic_maps"
                    tools:text="@string/location"/>

                <TextView
                    android:id="@+id/tv_item_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:drawablePadding="8dp"
                    android:textSize="16sp"
                    android:textColor="@color/md_theme_onSurface"
                    android:fontFamily="@font/inter_semibold"
                    android:gravity="center_vertical"
                    app:drawableStartCompat="@drawable/ic_star_24"
                    tools:text="@string/rating"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:drawablePadding="8dp"
                    android:textSize="24sp"
                    android:textColor="@color/md_theme_onSurface"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/description"/>

                <TextView
                    android:id="@+id/tv_item_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="16sp"
                    android:textColor="@color/md_theme_onSurface"
                    tools:text="@string/description"/>

                <Button
                    android:id="@+id/btn_buka_maps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_gravity="bottom"
                    android:text="@string/button"
                    android:textColor="@color/md_theme_onSurface"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</androidx.core.widget.NestedScrollView>