<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/onBoarding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragment_on_boarding_scene"
    tools:context=".ui.onboarding.OnBoardingFragment">

    <ImageView
        android:id="@+id/logomenu1"
        android:layout_width="325dp"
        android:layout_height="226dp"
        android:src="@drawable/logomenu1"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"/>

    <TextView
        android:id="@+id/titleMenu1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_menu_1"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/logomenu1"
        app:layout_constraintStart_toStartOf="@+id/logomenu1"
        app:layout_constraintTop_toBottomOf="@+id/logomenu1"/>

    <TextView
        android:id="@+id/descMenu1"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:text="@string/desc_menu_1"
        android:textSize="13sp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="@+id/titleMenu1"
        app:layout_constraintStart_toStartOf="@+id/titleMenu1"
        app:layout_constraintTop_toBottomOf="@+id/titleMenu1"/>

    <ImageView
        android:id="@+id/logoMenu2"
        android:layout_width="325dp"
        android:layout_height="226dp"
        android:src="@drawable/logomenu2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/titleMenu2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_menu_2"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/logoMenu2"
        app:layout_constraintStart_toStartOf="@+id/logoMenu2"
        app:layout_constraintTop_toBottomOf="@+id/logoMenu2"/>

    <TextView
        android:id="@+id/descMenu2"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:text="@string/desc_menu_2"
        android:textSize="13sp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="@+id/titleMenu2"
        app:layout_constraintStart_toStartOf="@+id/titleMenu2"
        app:layout_constraintTop_toBottomOf="@+id/titleMenu2"/>

    <ImageView
        android:id="@+id/logoMenu3"
        android:layout_width="325dp"
        android:layout_height="226dp"
        android:src="@drawable/logomenu3"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"/>

    <TextView
        android:id="@+id/titleMenu3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_menu_3"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/logoMenu3"
        app:layout_constraintStart_toStartOf="@+id/logoMenu3"
        app:layout_constraintTop_toBottomOf="@+id/logoMenu3"/>

    <TextView
        android:id="@+id/descMenu3"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:text="@string/desc_menu_3"
        android:textSize="13sp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="@+id/titleMenu3"
        app:layout_constraintStart_toStartOf="@+id/titleMenu3"
        app:layout_constraintTop_toBottomOf="@+id/titleMenu3"/>

    <ImageView
        android:id="@+id/logoMenu4"
        android:layout_width="325dp"
        android:layout_height="226dp"
        android:src="@drawable/logomenu4"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"/>

    <TextView
        android:id="@+id/titleMenu4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_menu_4"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/logoMenu4"
        app:layout_constraintStart_toStartOf="@+id/logoMenu4"
        app:layout_constraintTop_toBottomOf="@+id/logoMenu4"/>

    <TextView
        android:id="@+id/descMenu4"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:text="@string/desc_menu_4"
        android:textSize="13sp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="@+id/titleMenu4"
        app:layout_constraintStart_toStartOf="@+id/titleMenu4"
        app:layout_constraintTop_toBottomOf="@+id/titleMenu4"/>

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu1"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="130dp"
        android:src="@drawable/outline_circle_24"
        app:altSrc="@drawable/baseline_circle_24"
        app:layout_constraintEnd_toStartOf="@+id/menu2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu2"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:altSrc="@drawable/baseline_circle_24"
        android:src="@drawable/outline_circle_24"
        app:layout_constraintStart_toEndOf="@+id/menu1"
        app:layout_constraintBottom_toBottomOf="@+id/menu1"
        app:layout_constraintEnd_toStartOf="@+id/menu3"
        app:layout_constraintTop_toTopOf="@+id/menu1"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.5"/>

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu3"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:altSrc="@drawable/baseline_circle_24"
        app:srcCompat="@drawable/outline_circle_24"
        app:layout_constraintBottom_toBottomOf="@+id/menu2"
        app:layout_constraintEnd_toStartOf="@+id/menu4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/menu2"
        app:layout_constraintTop_toTopOf="@+id/menu2"
        app:layout_constraintVertical_bias="0.0"/>

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu4"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="130dp"
        app:altSrc="@drawable/baseline_circle_24"
        app:srcCompat="@drawable/outline_circle_24"
        app:layout_constraintBottom_toBottomOf="@+id/menu3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/menu3"
        app:layout_constraintTop_toTopOf="@+id/menu3"
        app:layout_constraintVertical_bias="0.0"/>

    <Button
        android:id="@+id/btn_gabung"
        android:layout_width="154dp"
        android:layout_height="40dp"
        android:layout_marginBottom="37dp"
        android:alpha="0"
        android:enabled="false"
        android:textStyle="bold"
        android:text="@string/button_get_started"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        app:layout_constraintBottom_toTopOf="@+id/menu2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:src="@drawable/logojos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>